--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,12 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
+    <form method = "POST" action= "/food" >
+      <p>Your Name: <input type="text" name="name"></p>
+      <%# access the data entered into the Favorite Foods text box via params[:favorite_food] %>
+      <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+      <input type="submit">
+    </form>
 
   </body>
 </html>
